# nanai-shiftjis-reader

./: .gitignore  AGENTS.md  Cargo.toml  README.md  WINAPP_MSIX.md  appxmanifest.xml  build-msix.ps1  config.toml  nanai-shiftjis-reader.code-workspace  shift_jis.txt  temp_test.rs  winapp.yaml
src/: file_process.rs  lib.rs  lib_dll.rs  main.rs  ui.rs
src/lib_dll/: class_factory.rs  dll.rs  explorer_command.rs  lib_dll.rs  mod.rs  utils.rs
